...
            android:paddingRight="16dp"
            android:text="Downvote"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp" />
        <Button
            android:id="@+id/messageCommentButton"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCommentButtonClick"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="Comments"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp" />
        <Button
            android:id="@+id/messageProfileButton"
            style="@style/Widget.AppCompat.Button.Small"
...
